# rdows

./: .gitignore  1_ATOMICS.md  4_PARSER.md  CLAUDE.md  Cargo.toml  README.md  gen-certs.sh  notes.md
crates/rdows-client/: Cargo.toml
crates/rdows-client/examples/: atomic_counter.rs  echo_send_recv.rs  err_rnr_demo.rs  one_sided_read.rs  one_sided_write.rs
crates/rdows-client/src/: completion.rs  connection.rs  lib.rs  main.rs  verbs.rs
crates/rdows-client/tests/: integration.rs
crates/rdows-core/: Cargo.toml
crates/rdows-core/src/: error.rs  frame.rs  lib.rs  memory.rs  message.rs  opcode.rs  queue.rs
crates/rdows-kv/: Cargo.toml
crates/rdows-kv/src/: api.rs  kv.rs  main.rs  ui.html
crates/rdows-server/: Cargo.toml
crates/rdows-server/src/: handler.rs  lib.rs  main.rs  memory_store.rs  session.rs
docs/: rdows-rfc.txt
docs/prompts/: 0_BOOTSTRAP.md  5_DOS.md  6_KV_STORE_APP.md
wireshark/: README.md  rdows.lua
