[package]
name = "rdows-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rdows-core = { path = "../rdows-core" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-rustls = "0.26"
rustls = "0.23"
rand = "0.8"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

[[bin]]
name = "rdows-client"
path = "src/main.rs"

[dev-dependencies]
rcgen = "0.13"
rdows-server = { path = "../rdows-server" }
rustls-pemfile = "2"
tokio-rustls = "0.26"
tracing-subscriber = "0.3"
