[package]
name = "rdows-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
rdows-core = { path = "../rdows-core" }
rdows-client = { path = "../rdows-client" }
rdows-server = { path = "../rdows-server" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
