[package]
name = "rdows-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rdows-core = { path = "../rdows-core" }
bytes = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

[dev-dependencies]
rcgen = "0.13"
